# akeneo-snapshot-publisher-confluence

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  diff.json  snapshot-example.json
.github/workflows/: build-and-publish.yml
src/: confluence.rs  db.rs  diff.rs  main.rs  renderer.rs
